# DoppelGoner

./: .gitignore
entity-resolution/: .gitignore  delete-records.sql  package-lock.json  package.json
entity-resolution/app/: layout.tsx  manifest.json  page.tsx
entity-resolution/app/api/auth/login/: route.ts
entity-resolution/app/api/auth/logout/: route.ts
entity-resolution/app/api/auth/register/: route.ts
entity-resolution/app/api/auth/status/: route.ts
entity-resolution/app/api/bulk-connections/: route.ts
entity-resolution/app/api/bulk-node-details/: route.ts
entity-resolution/app/api/bulk-visualizations/: route.ts
entity-resolution/app/api/cluster-progress/: route.ts
entity-resolution/app/api/clusters/: route.ts
entity-resolution/app/api/clusters/[clusterId]/finalize-review/: route.ts
entity-resolution/app/api/connections/[edgeId]/: route.ts
entity-resolution/app/api/datasets/: route.ts
entity-resolution/app/api/debug/: route.ts
entity-resolution/app/api/disconnect-dependent-service-matches/: route.ts
entity-resolution/app/api/edge-visualizations/[edgeId]/review/: route.ts
entity-resolution/app/api/entity-groups/[groupId]/review/: route.ts
entity-resolution/app/api/nodeData/[nodeId]/: route.ts
entity-resolution/app/api/opinion-preferences/: route.ts
entity-resolution/app/api/post-processing-audit/: route.ts
entity-resolution/app/api/post-processing-audit/bulk-mark-reviewed/: route.ts
entity-resolution/app/api/post-processing-audit/clusters/: route.ts
entity-resolution/app/api/service-groups/[groupId]/review/: route.ts
entity-resolution/app/api/teams/: route.ts
entity-resolution/app/api/visualization/[clusterId]/: route.ts
entity-resolution/components/: cluster-selector.tsx  connection-review-tools.tsx  entity-resolution-context.tsx  graph-visualizer.tsx  progress-displays.tsx  resolution-mode-switcher.tsx
entity-resolution/components/audit/: audit-decision-card.tsx  audit-loading-states.tsx  audit-workflow-guide.tsx
entity-resolution/components/auth/: app-content.tsx  auth-forms.tsx
entity-resolution/components/connection-review-tools/: connection-review-tools.tsx  node-attribute-display.tsx
entity-resolution/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  (+4 more)
entity-resolution/context/: auth-context.tsx  entity-data-context.tsx  entity-resolution-context.tsx  entity-state-context.tsx  entity-workflow-context.tsx
entity-resolution/hooks/: use-resize-observer.ts
entity-resolution/lib/: session.ts
entity-resolution/types/: db.ts  entity-resolution.ts  post-processing.ts
entity-resolution/utils/: api-client.ts  api-utils.ts  auth-db.ts  db-utils.ts  gateway-client.ts  session-migration.ts  team-context.ts
matching_pipeline/: Cargo.toml
matching_pipeline/src/: cluster_visualization.rs  config.rs  consolidate_clusters.rs  db.rs  entity_organizations.rs  lib.rs  main.rs  models.rs  pipeline_state_utils.rs  results.rs  service_cluster_visualization.rs  service_consolidate_clusters.rs  signature.rs
matching_pipeline/src/matching/: address.rs  email.rs  geospatial.rs  name.rs  phone.rs  url.rs
matching_pipeline/src/reinforcement/: feature_cache_service.rs  mod.rs  orchestrator.rs
matching_pipeline/src/reinforcement/entity/: confidence_tuner.rs  feature_cache_prewarmer.rs  feature_cache_service.rs  feature_extraction.rs  feedback_processor.rs  mod.rs  orchestrator.rs
matching_pipeline/src/reinforcement/service/: mod.rs  service_confidence_tuner.rs  service_feature_cache_prewarmer.rs  service_feature_cache_service.rs  service_feature_extraction.rs  service_feedback_processor.rs  service_orchestrator.rs
matching_pipeline/src/service_matching/: email.rs  embedding.rs  mod.rs  name.rs  service_email.rs  service_name.rs  service_url.rs  types.rs  url.rs
organization_matching/: Cargo.toml
organization_matching/src/: lib.rs  main.rs
organization_matching/src/clustering/: entity_clustering.rs  mod.rs
organization_matching/src/entity_identification/: entity_id.rs  mod.rs
organization_matching/src/matching/: address.rs  db.rs  email.rs  manager.rs  mod.rs  name.rs  phone.rs  url.rs
organization_matching/src/rl/: confidence_tuner.rs  feature_cache.rs  feature_extraction.rs  feedback_processor.rs  mod.rs  orchestrator.rs
organization_matching/src/utils/: constants.rs  contributor_filter.rs  instantiate_run.rs  mod.rs  pipeline_state.rs
organization_matching/src/utils/progress_bars/: logging.rs  mod.rs  progress_callback.rs  progress_config.rs
service_matching/: Cargo.toml
service_matching/src/: lib.rs  main.rs
service_matching/src/candidate_generation/: candidate_generation.rs  mod.rs
service_matching/src/clustering/: create_clusters.rs  db.rs  mod.rs
service_matching/src/matching/: db.rs  email.rs  embedding.rs  manager.rs  mod.rs  name.rs
service_matching/src/rl/: mod.rs  service_confidence_tuner.rs  service_feature_cache.rs  service_feature_extraction.rs  service_feedback_processor.rs  service_orchestrator.rs
service_matching/src/utils/: candle.rs  mod.rs  pipeline_state.rs  rl_config.rs  service_contributor_filter.rs
