[package]
name = "organization_matching"
version = "0.1.0"
edition = "2021"
authors = ["David Botos"]
description = "A deduplication system for HSDS with contributor filtering"

[dependencies]
# Error handling
anyhow = "1.0.98"

# Logging
log = "0.4.27"
env_logger = "0.11.3"

# Date and time
chrono = { version = "0.4.40", features = ["serde"] }

# UUID generation
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Random number generation
rand = { version = "0.8", features = ["std", "std_rng"] }

# Async runtime
tokio = { version = "1.44.2", features = ["full"] }

# PostgreSQL
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
deadpool-postgres = "0.10.5"
postgres-types = { version = "0.2.9", features = ["derive", "with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }

# Async utilities
futures = "0.3.30"
bytes = "1.10.1"

# URL handling
url = "2.5.4"

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Machine Learning
smartcore = { version = "0.3.2", features = ["serde"] }
ndarray = "0.15.6"
linfa = "0.6.1"
candle-core = { version = "0.9.1", features = ["accelerate"] }
candle-nn = { version = "0.9.1", features = ["accelerate"] }
once_cell = "1.19.0"

# Reconciling storage types
pgvector = { version = "0.4", features = ["postgres"] }

# Graph algorithms
petgraph = "=0.8.2"

# For string similarity calculations
strsim = "0.10.0"

# For regular expressions in name normalization
regex = "1.7.0"

lru = "0.9"
num_cpus = "1.15"
sysinfo = "0.30"
indicatif = "0.17"

# Hashing calculations
sha2 = "0.10"
hex = "0.4"

reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5.40", features = ["derive"] }

# NEW: Environment variable support
dotenv = "0.15"

# Define binary targets
[[bin]]
name = "dedupe"
path = "src/main.rs"

[[bin]]
name = "train_reviewer_model"
path = "src/bin/train_reviewer_model.rs"

[[bin]]
name = "backfill_features"
path = "src/bin/backfill_features.rs"

[[bin]]
name = "report_model_weights"
path = "src/bin/report_model_weights.rs"

[[bin]]
name = "run_clustering"
path = "src/bin/run_clustering.rs"

[[bin]]
name = "url_distance_tuner"
path = "src/bin/url_distance_tuner.rs"

[[bin]]
name = "entity_pair_validator"
path = "src/bin/entity_pair_validator.rs"

[[bin]]
name = "rl_retrofit"
path = "src/bin/rl_retrofit.rs"

[lib]
name = "dedupe_lib"
path = "src/lib.rs"